Fix footer spacing & sizing

--- a/csxxx/src/App.scss
+++ b/csxxx/src/App.scss
@@ -101,7 +101,7 @@ $secondary-grey: #B7B6BD;
 .body {
   display: flex;
   flex-direction: column;
-  height: 35%;
+  height: 40%;
   width: 100%;
   border-top: 6px solid $primary-green;
   border-bottom: 6px solid $primary-green;
@@ -272,7 +272,7 @@ $secondary-grey: #B7B6BD;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 25%;
+  height: 35%;
   width: 100%;
 }
 
@@ -288,7 +288,7 @@ $secondary-grey: #B7B6BD;
   color: white;
   font-size: 20pt;
   margin-top: 6pt;
-  margin-bottom: 12pt;
+  margin-bottom: 64pt;
 }
 /* end region footer */
 
